# send-logs-sdk

./: README.md  lola_logs.py  lola_logs_settings.py  pub_sub_handler.py  pyproject.toml  requirements.txt  setup.py  test_send_logs.py
sendlogssdk/: __init__.py  lola_logs.py  lola_logs_settings.py  pub_sub_handler.py
