[project]
name = "sendlogssdk"
version = "0.0.1"
authors = [
  { name="Ruben Gonzales", email="ruben@leapfinancial.com" },
]
description = "This project is a Python SDK for the lola kraken API. It is intended to be used by developers who want to integrate Lola into their own applications."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'google-cloud-pubsub >= 0.26.0',
    'colorlog >= 6.8.2',
    'pydantic >= 2', 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.urls]
"Homepage" = "https://github.com/leapfinancial/send-logs-sdk"
"Bug Tracker" = "https://github.com/leapfinancial/send-logs-sdk/issues"